Rebrand to Go4it Sports Academy: Complete site transformation for NCAA & professional athletes
- Updated HTML meta tags, titles, and Open Graph data
- Rebranded hero section for sports training focus
- Updated testimonials and content for athlete success stories
- Modified branding context with Go4it Sports Academy details
- Updated footer, PWA prompts, and onboarding messages
- Transformed README to focus on sports training and athlete development
- Changed all references from OpenEdTex to Go4it Sports Academy
- Updated feature highlights to emphasize FIFA training and NCAA prep

--- a/School/index.html
+++ b/School/index.html
@@ -5,27 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>OpenEdTex - AI-Powered Educational Technology Platform</title>
-    <meta name="title" content="OpenEdTex - AI-Powered Educational Technology Platform" />
-    <meta name="description" content="Experience the future of education with OpenEdTex. AI-powered learning assistant, interactive courses, real-time classrooms, and comprehensive analytics for modern education." />
-    <meta name="keywords" content="AI education, online learning, educational technology, interactive courses, AI tutor, classroom management, student analytics, TEKS aligned curriculum" />
-    <meta name="author" content="OpenEdTex Team" />
+    <title>Go4it Sports Academy - Elite Training for NCAA & Professional Athletes</title>
+    <meta name="title" content="Go4it Sports Academy - Elite Training for NCAA & Professional Athletes" />
+    <meta name="description" content="Elite academic and sports training platform for student athletes pursuing NCAA sports and professional FIFA soccer careers. AI-powered learning, performance analytics, and comprehensive athlete development." />
+    <meta name="keywords" content="NCAA sports, professional soccer, FIFA training, student athletes, sports academy, athletic training, college sports, soccer academy, athlete development, sports performance" />
+    <meta name="author" content="Go4it Sports Academy Team" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://openedtex.com/" />
-    <meta property="og:title" content="OpenEdTex - AI-Powered Educational Technology Platform" />
-    <meta property="og:description" content="Experience the future of education with AI-powered learning assistant, interactive courses, and real-time classrooms." />
-    <meta property="og:image" content="https://openedtex.com/og-image.jpg" />
+    <meta property="og:url" content="https://go4itacademy.netlify.app/" />
+    <meta property="og:title" content="Go4it Sports Academy - Elite Training for NCAA & Professional Athletes" />
+    <meta property="og:description" content="Elite academic and sports training platform for student athletes pursuing NCAA sports and professional FIFA soccer careers." />
+    <meta property="og:image" content="https://go4itacademy.netlify.app/og-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://openedtex.com/" />
-    <meta property="twitter:title" content="OpenEdTex - AI-Powered Educational Technology Platform" />
-    <meta property="twitter:description" content="Experience the future of education with AI-powered learning assistant, interactive courses, and real-time classrooms." />
-    <meta property="twitter:image" content="https://openedtex.com/twitter-image.jpg" />
+    <meta property="twitter:url" content="https://go4itacademy.netlify.app/" />
+    <meta property="twitter:title" content="Go4it Sports Academy - Elite Training for NCAA & Professional Athletes" />
+    <meta property="twitter:description" content="Elite academic and sports training platform for student athletes pursuing NCAA sports and professional FIFA soccer careers." />
+    <meta property="twitter:image" content="https://go4itacademy.netlify.app/twitter-image.jpg" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -64,7 +64,7 @@
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://openedtex.com/" />
+    <link rel="canonical" href="https://go4itacademy.netlify.app/" />
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
@@ -73,7 +73,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="OpenEdTex" />
+    <meta name="apple-mobile-web-app-title" content="Go4it Sports Academy" />
   </head>
   <body>
     <div id="root"></div>
